--- a/login-ui-project/style.css
+++ b/login-ui-project/style.css
@@ -19,6 +19,7 @@ body {
 
         body {
             display: flex;
+            margin:0px;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -27,15 +28,15 @@ body {
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
-            transition: transform 0.3s ease-in-out;
-    
-        }
-        
-         body:hover{
-            transform: scale(1.5);
-         }
-        #login-box {
-            display: flex;
+            }
+            
+            #login-box:hover{
+                transform: scale(1.5);
+                
+                }
+                #login-box {
+                    display: flex;
+                    transition: transform 0.3s ease-in-out;
             flex-direction: column;
             justify-content: center;
             align-items: center;
